Fixed resizable area overflow.

--- a/client/landing/stylus/app.activity.styl
+++ b/client/landing/stylus/app.activity.styl
@@ -644,6 +644,7 @@ button.kdbutton.dark
 
   .kdinput.text
     size                  100%,33px
+    max-width             100%
     font-size             13px
     border-color          rgb(232,232,232) rgb(232,232,232) rgb(224,224,224) rgb(232,232,232)
     padding               8px 10px 6px 10px
